--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: ap-southeast-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: shopify-exporter-repo           # set this to your Amazon ECR repository name
-  ECS_SERVICE: shopify-exporter-repo-3427                 # set this to your Amazon ECS service name
+  ECS_SERVICE: shopify-exporter-repo-db80                 # set this to your Amazon ECS service name
   ECS_CLUSTER: electric-rabbit-pu92px                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ./aws-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
@@ -68,7 +68,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: latest
       run: |
         # Build a docker container and
         # push it to ECR so that it can
